--- a/src/app.scss
+++ b/src/app.scss
@@ -6,4 +6,27 @@
 @import "~taro-ui/dist/style/components/divider.scss";
 @import "~taro-ui/dist/style/components/avatar.scss";
 @import "~taro-ui/dist/style/components/flex.scss";
+@import "~taro-ui/dist/style/components/article.scss";
 
+.doc-header{
+  align-items: center;
+  padding: 1.28rem;
+  height: 2rem;
+  .doc-header__title{
+    position: relative;
+    height: 1.92rem;
+    color: #333;
+    font-size: .85333rem;
+  }
+}
+.doc-header__title::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  display: inline-block;
+  width: 3.56rem;
+  height: 2PX;
+  border-radius: 1PX;
+  background-color: #6190e8;
+}
